--- a/README.Rmd
+++ b/README.Rmd
@@ -22,8 +22,11 @@ knitr::opts_chunk$set(
 [![lint](https://github.com/YimingMiao/bis620.2022/actions/workflows/lint.yaml/badge.svg)](https://github.com/YimingMiao/bis620.2022/actions/workflows/lint.yaml)
 <!-- badges: end -->
 
+The package `bis620.2022` contains the UKBiobank Accelerometry Data, and has functions to plot the time series and create spectral signatures by taking the modulus of Fourier coefficients of the channels.
 
-The goal of bis620.2022 is to ...
+[coverage page](https://app.codecov.io/gh/YimingMiao/bis620.2022?branch=main)
+
+[lint result](https://github.com/YimingMiao/bis620.2022/actions/workflows/lint.yaml)
 
 ## Installation
 
@@ -36,25 +39,28 @@ devtools::install_github("YimingMiao/bis620.2022")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
+```{r message=FALSE}
 library(bis620.2022)
-## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+This are some examples showing basic usage of the package:
 
-```{r cars}
-summary(cars)
+Acquire data:
+
+```{r}
+data(ukb_accel)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
+Plot the time-series data:
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
+```{r}
+accel_plot(ukb_accel[1:1000,])
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+Plot the spectral signatures:
+
+```{r}
+ukb_accel[1:1000,] |>
+  spectral_signature(take_log = FALSE) |>
+  accel_plot()
+```
